# commit-98

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs
